--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.390.0",
+    "mysql2": "^3.10.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
